# ombre

./: Cargo.toml  README.md  crates.js  help.html  index.html  settings.html  source-files.js
ab_glyph/: all.html  enum.GlyphImageFormat.html  enum.OutlineCurve.html  fn.point.html  index.html  struct.CodepointIdIter.html  struct.FontArc.html  struct.FontRef.html  struct.FontVec.html  struct.Glyph.html  struct.GlyphId.html  struct.GlyphImage.html  struct.InvalidFont.html  struct.Outline.html  struct.OutlinedGlyph.html  struct.PxScale.html  struct.PxScaleFactor.html  struct.PxScaleFont.html  struct.Rect.html  struct.VariationAxis.html  trait.Font.html  trait.ScaleFont.html  trait.VariableFont.html  type.Point.html
ab_glyph_rasterizer/: all.html  fn.point.html  index.html  struct.Point.html  struct.Rasterizer.html
anstream/: trait.RawStream.html
approx/: all.html  index.html  macro.abs_diff_eq.html  macro.abs_diff_ne.html  macro.assert_abs_diff_eq.html  macro.assert_abs_diff_ne.html  macro.assert_relative_eq.html  macro.assert_relative_ne.html  macro.assert_ulps_eq.html  macro.assert_ulps_ne.html  macro.relative_eq.html  macro.relative_ne.html  macro.ulps_eq.html  macro.ulps_ne.html  struct.AbsDiff.html  struct.Relative.html  struct.Ulps.html  trait.AbsDiffEq.html  trait.RelativeEq.html  trait.UlpsEq.html
arrayvec/: struct.ArrayString.html  struct.ArrayVec.html  struct.Drain.html  struct.IntoIter.html
ash/: all.html  enum.LoadingError.html  index.html  macro.define_handle.html  macro.handle_nondispatchable.html  macro.match_in_struct.html  macro.match_out_struct.html  macro.vk_bitflags_wrapped.html  struct.Device.html  struct.Entry.html  struct.Instance.html  trait.RawPtr.html
bytemuck/: enum.PodCastError.html  trait.Contiguous.html  trait.NoUninit.html  trait.Pod.html  trait.PodInOption.html  trait.Zeroable.html  trait.ZeroableInOption.html
calloop/: all.html  enum.Mode.html  enum.PostAction.html  index.html  macro.batch_register.html  macro.batch_reregister.html  macro.batch_unregister.html  struct.Dispatcher.html  struct.EventLoop.html  struct.Idle.html  struct.Interest.html  struct.LoopHandle.html  struct.LoopSignal.html  (+6 more)
crates/shadgen-gui/: CHANGELOG.md  Cargo.toml
crates/shadgen-gui/src/: app.rs  config.rs  lib.rs  logs.rs  modal.rs  settings.rs  theme.rs
(+18775 files in other folders)
