[package]
name = "shadgen-gui"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
atty = "0.2.14"
chrono = "0.4.26"
clap = { version = "4.3.10", features = ["env", "derive"] }
directories = "5.0.1"
iced = { version = "0.9.0", features = ["tokio"] }
once_cell = "1.18.0"
tokio = { version = "1.29.1", features = ["macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }

[[bin]]
name = "shadgen"
doc = false
path = "src/bin/shadgen.rs"
