[package]
name = "shadgen-gui"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
atty = "0.2.14"
camino = { version = "1.1.4", features = ["serde1"] }
chrono = "0.4.26"
clap = { version = "4.3.10", features = ["env", "derive"] }
directories = "5.0.1"
iced = { version = "0.9.0", features = ["tokio"] }
iced_aw = { version = "0.5.2", features = ["cupertino", "glow", "spinner"] }
iced_native = "0.10.3"
once_cell = "1.18.0"
serde = { version = "1.0.166", features = ["derive"] }
tokio = { version = "1.29.1", features = ["macros"] }
toml = "0.7.5"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }

[[bin]]
name = "shadgen"
doc = false
path = "src/bin/shadgen.rs"
